fix(drip-table): sticky header z-index should above sticky content

--- a/packages/drip-table/src/layouts/table/index.less
+++ b/packages/drip-table/src/layouts/table/index.less
@@ -24,7 +24,7 @@
 
   &-sticky-holder {
     position: sticky;
-    z-index: 2;
+    z-index: 3;
   }
 
   &-thead > tr > th {
